# ivaronix

./: .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  0G_RESOURCES.md  0G_TESTNET_NOTES.md  BRAND.md  BUILD.md  BUILD_PROGRESS.md  CHANGELOG.md  CLAUDE.md  COMPONENTS.md  CONTRIBUTING.md  ENGINEERING_DEBUG_LOG.md  FINAL_BUILD_PLAN.md  Going_Extra.md  HLD.md  IVARONIX_PAYMENT_STRATEGY.md  Ivaronix.html  Ivaronix.md  Ivaronix_User_QA_Test_Plan.md  JUDGE_REPORT.md  LICENSE  PITCH.md  PRD.md  QA_FIX_LOG.md  QA_TEST_PROGRESS.md  README.md  RECEIPTS_SPEC.md  SECURITY.md  SESSION_FINAL.md  TEST_REPORT.md  UI_UX_GUIDE.md  da.env.example  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  (+3 more)
.githooks/: commit-msg  pre-commit
QA_PROOF_PACK/: MAINNET_LAUNCH_READY.md  PHASE_1_DONE.md  QA_FIX_LOG.md  QA_TEST_PROGRESS.md  swarm-todo-iteration14.md
_archive/: 0G_OFFICIAL_LINKS.md  IVARONIX_BUILD_FOCUS.md  IVARONIX_FORGE_0G_DOC_GAPS.md  IVARONIX_FORGE_CLI_PLAN.md  IVARONIX_HLD.md  OG integration.md  ivaronix_final_prd.md  my opinion on research.md
brand/: tokens.css  tokens.json
contracts/: AGENTS.md  foundry.toml
demo/: RUN.md  sample-vendor-agreement.md
deployments/: testnet.json
docs/: 0G_DA_INTEGRATION.md  AAT_MAPPING.md  BUILD_COMPLETE_AUDIT.md  CI_WALLET.md  CRYPTO_NOTES.md  EXTRATESTING.md  FINAL_BUILD_TEST_PLAN.md  HALF_BAKED.md  HASH_FUNCTION.md  JUDGE_GUIDE.md  JUDGE_REPLAY.md  LOOP_DIRECTIVE.md  PITCH.md  (+30 more)
ivaronix-verifier-rs/: Cargo.toml  README.md
ivaronix-verifier-rs/src/: lib.rs  main.rs
(+4750 files in other folders)
